SERVER-82883: Recovering TransactionCoordinator on stepup should skip acquiring read/write tickets while participants are in the prepared state

GitOrigin-RevId: fe92af8bb9da945673722a7a4115401cfa95a6ff