src/mongo/db/s/transaction_coordinator_service.cpp
@@ -65,6 +65,8 @@
 namespace mongo {
 namespace {
 
+MONGO_FAIL_POINT_DEFINE(hangBeforeTxnCoordinatorOnStepUpWork);
+
 const auto transactionCoordinatorServiceDecoration =
     ServiceContext::declareDecoration<TransactionCoordinatorService>();
 
@@ -230,6 +232,17 @@ void TransactionCoordinatorService::onStepUp(OperationContext* opCtx,
                 recoveryDelayForTesting,
                 [catalogAndScheduler = _catalogAndScheduler,
                  cancelSource = _cancelSource](OperationContext* opCtx) {
+                    if (MONGO_unlikely(hangBeforeTxnCoordinatorOnStepUpWork.shouldFail())) {
+                        LOGV2(8288301, "Hit hangBeforeTxnCoordinatorOnStepUpWork failpoint");
+                        hangBeforeTxnCoordinatorOnStepUpWork.pauseWhileSet(opCtx);
+                    }
+
+                    // Skip ticket acquisition in order to prevent possible deadlock when
+                    // participants are in the prepared state. See SERVER-82883 and SERVER-60682.
+                    ScopedAdmissionPriorityForLock skipTicketAcquisition(
+                        shard_role_details::getLocker(opCtx),
+                        AdmissionContext::Priority::kImmediate);
+
                     auto& replClientInfo = repl::ReplClientInfo::forClient(opCtx->getClient());
                     replClientInfo.setLastOpToSystemLastOpTime(opCtx);
 
