src/mongo/db/s/transaction_coordinator_util.cpp
@@ -101,6 +101,7 @@ MONGO_FAIL_POINT_DEFINE(hangBeforeSendingPrepare);
 MONGO_FAIL_POINT_DEFINE(hangBeforeWritingDecision);
 MONGO_FAIL_POINT_DEFINE(hangBeforeSendingCommit);
 MONGO_FAIL_POINT_DEFINE(hangBeforeSendingAbort);
+MONGO_FAIL_POINT_DEFINE(hangBeforeWritingEndOfTransaction);
 MONGO_FAIL_POINT_DEFINE(hangBeforeDeletingCoordinatorDoc);
 MONGO_FAIL_POINT_DEFINE(hangAfterDeletingCoordinatorDoc);
 
@@ -242,16 +243,20 @@ Future<repl::OpTime> persistParticipantsList(
         boost::none /* no need for a backoff */,
         [](const StatusWith<repl::OpTime>& s) { return shouldRetryPersistingCoordinatorState(s); },
         [&scheduler, lsid, txnNumberAndRetryCounter, participants] {
-            return scheduler.scheduleWork(
-                [lsid, txnNumberAndRetryCounter, participants](OperationContext* opCtx) {
-                    getTransactionCoordinatorWorkerCurOpRepository()->set(
-                        opCtx,
-                        lsid,
-                        txnNumberAndRetryCounter,
-                        CoordinatorAction::kWritingParticipantList);
-                    return persistParticipantListBlocking(
-                        opCtx, lsid, txnNumberAndRetryCounter, participants);
-                });
+            return scheduler.scheduleWork([lsid, txnNumberAndRetryCounter, participants](
+                                              OperationContext* opCtx) {
+                // Skip ticket acquisition in order to prevent possible deadlock when
+                // participants are in the prepared state. See SERVER-82883 and SERVER-60682.
+                ScopedAdmissionPriorityForLock skipTicketAcquisition(
+                    shard_role_details::getLocker(opCtx), AdmissionContext::Priority::kImmediate);
+                getTransactionCoordinatorWorkerCurOpRepository()->set(
+                    opCtx,
+                    lsid,
+                    txnNumberAndRetryCounter,
+                    CoordinatorAction::kWritingParticipantList);
+                return persistParticipantListBlocking(
+                    opCtx, lsid, txnNumberAndRetryCounter, participants);
+            });
         });
 }
 
@@ -939,6 +944,11 @@ Future<void> writeEndOfTransaction(txn::AsyncWorkScheduler& scheduler,
                                    const LogicalSessionId& lsid,
                                    const TxnNumberAndRetryCounter& txnNumberAndRetryCounter,
                                    const std::vector<NamespaceString>& affectedNamespaces) {
+    if (MONGO_unlikely(hangBeforeWritingEndOfTransaction.shouldFail())) {
+        LOGV2(8288302, "Hit hangBeforeWritingEndOfTransaction failpoint");
+        hangBeforeWritingEndOfTransaction.pauseWhileSet();
+    }
+
     if (!feature_flags::gFeatureFlagEndOfTransactionChangeEvent.isEnabled(
             serverGlobalParams.featureCompatibility.acquireFCVSnapshot())) {
         return Future<void>::makeReady();
